src/test/deca/context/invalid/testWrongIdentMethod.deca
// Description : Mauvais nom de méthode
class A {
    int b;
    void int() {

    }
}
